--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -38,7 +38,9 @@ $mid-grey: rgb(153, 153, 153) !default;
 /// @type Color
 $dark-grey: rgb(68, 68, 68) !default;
 
-
+/// Background Icon btn
+/// @type Color
+$backgroundIconHover: rgba(153, 153, 153, 0.2) !default;
 
 
 
