--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -23,6 +23,7 @@
 @import 'components/button';
 @import 'components/error-handler';
 @import 'components/loading';
+@import 'components/textbox';
 
 // 6. Page-specific styles
 @import 'pages/home';
