--- a/src/app/chat/chat/chat-detail-add/chat-detail-add.component.html
+++ b/src/app/chat/chat/chat-detail-add/chat-detail-add.component.html
@@ -1,21 +1,20 @@
-<div class="container-fluid">
-  <div class="row ngx-util-detail-add no-margin">
-    <!--Input-->
-    <div class="col-11">
-      <form [formGroup]="messageForm">
-        <input id="txt_message" class="col-12" formControlName="message" [attr.disabled]="disabled ? '' : null"
-        [placeholder]="placeholder" (keyup.enter)="sendMessage()">
-      </form>
-    </div>
-    <!--Acciones-->
-    <div class="col-1 no-padding">
-      <div class="ngx-util-btns-actions">
-        <input class="ngx-util-input-file" type="file" accept="image/*" #file (change)="sendImage($event)" multiple>
-        <button id="btn_sendImage" type="button" class="col-6 btn ngx-util-btn-icon ngx-util-btn-gray" (click)="file.click()" [attr.disabled]="disabled ? '' : null"><i
-            class="fa fa-camera" aria-hidden="true"></i></button>
-        <button id="btn_sendMessage" type="button" class="col-6 btn ngx-util-btn-icon ngx-util-btn-gray" [attr.disabled]="disabled ? '' : null"
-          (click)="sendMessage()"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
-      </div>
-    </div>
+<div class="clt-width-100 clt-flex" style="padding: 15px;">
+  <!--Input-->
+  <form [formGroup]="messageForm" class="clt-width-100">
+    <input id="txt_message" class="clt-width-100 clt-txt-search" formControlName="message" [attr.disabled]="disabled ? '' : null"
+      [placeholder]="placeholder" (keyup.enter)="sendMessage()">
+  </form>
+  <div class="clt-float-right  clt-flex-row" style="width: 110px;">
+    <!--Añadir archivo-->
+    <input type="file" class="clt-hidden" accept="image/*" #file (change)="sendImage($event)" multiple>
+    <button id="btn_sendImage" class="clt-flex-50 clt-no-padding clt-btn-icon" type="button" (click)="file.click()"
+      [attr.disabled]="disabled ? '' : null">
+      <i class="fa fa-camera" aria-hidden="true"></i>
+    </button>
+    <!--Enviar mensaje-->
+    <button id="btn_sendMessage" type="button" class="clt-flex-50 clt-no-padding clt-btn-icon" [attr.disabled]="disabled ? '' : null"
+      (click)="sendMessage()">
+      <i class="fa fa-paper-plane" aria-hidden="true"></i>
+    </button>
   </div>
 </div>
