--- a/src/app/chat/chat/chat-detail-message/chat-detail-message.component.scss
+++ b/src/app/chat/chat/chat-detail-message/chat-detail-message.component.scss
@@ -84,7 +84,7 @@
     font-size: 0.875rem;
 }
 .ngx-util-chat-left .hour{
-    color: rgba(50, 65, 72, 0.4);;
+    color: rgba(50, 65, 72, 0.4);
     opacity: 1;
     font-size: 0.8125rem;
 }
