--- a/src/app/chat/chat/chat-detail/chat-detail.component.html
+++ b/src/app/chat/chat/chat-detail/chat-detail.component.html
@@ -3,7 +3,7 @@
   <div class="col-md-12" style="padding: 1rem 0 7rem 0;text-align: center; height: 100%; display: table-cell; vertical-align: middle">
       <img class="img-fluid" src="{{imageChat}}" alt="Wi-Fi" style="height: 100%;  max-height: 300px;">
       <p style="font-size: 16px;">
-          <b style="font-size: 24px;">Tbusca te mantiene conectado</b><br><br>
+          <strong style="font-size: 24px;">Tbusca te mantiene conectado</strong><br><br>
           Conversa con tus lugares favoritos y de interes de un modo seguro y eficaz
       </p>
     </div>
