--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -21,6 +21,7 @@
 
 // 5. Components
 @import 'components/button';
+@import 'components/chat';
 @import 'components/error-handler';
 @import 'components/loading';
 @import 'components/textbox';
