--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div style="width: 1000px;">
-    <ngx-utilitario-chat-detail-add></ngx-utilitario-chat-detail-add>
+    <ngx-utilitario-chat-detail-message [messages]="messages"></ngx-utilitario-chat-detail-message> 
+    <!-- <ngx-utilitario-chat-detail-add></ngx-utilitario-chat-detail-add> -->
 </div>
+<button (click)="add()">agregar</button>
