añadir estilos preview

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<div style="width: 1000px;">
-    <ngx-utilitario-chat-detail-message [messages]="messages"></ngx-utilitario-chat-detail-message> 
+<div style="width: 100px;">
+    <ngx-utilitario-chat-detail-preview></ngx-utilitario-chat-detail-preview>
+    <!-- <ngx-utilitario-chat-detail-message [messages]="messages"></ngx-utilitario-chat-detail-message>  -->
     <!-- <ngx-utilitario-chat-detail-add></ngx-utilitario-chat-detail-add> -->
 </div>
-<button (click)="add()">agregar</button>
+<!-- <button (click)="add()">agregar</button> -->
