--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -22,6 +22,7 @@
 // 5. Components
 @import 'components/button';
 @import 'components/chat';
+@import 'components/em';
 @import 'components/error-handler';
 @import 'components/loading';
 @import 'components/textbox';
