--- a/src/app/chat/chat/chat-detail-preview/chat-detail-preview.component.scss
+++ b/src/app/chat/chat/chat-detail-preview/chat-detail-preview.component.scss
@@ -1,21 +1,13 @@
 //estilos para la cabecera del componente
-.ngx-util-preview-title{
+.clt-preview-title{
     background: #e7b723;
     color: #fff;
     padding: 0.9375rem 1.25rem;
     font-size: 1rem;
+    display: flex;
+    align-items: center;
 }
-.ngx-util-em-action{
-    padding: 0.625rem 0.875rem;
-    transition: 0.2s ease-in-out;
-    transform-style: preserve-3d;
-}
-.ngx-util-em-action:hover{
-    background: rgba(255, 255, 255, 0.2);
-    outline: none !important;
-    text-decoration: none;
-    border-radius: 50%;
-}
+
 //Estilos para la imagen selecionada
 .ngx-util-preview-body {
     text-align: center;
@@ -46,9 +38,9 @@
     height: -webkit-fill-available;
 }
 
-.ngx-util-preview-files-add{
-    flex: 0 0 14%;
-    max-width: 14%;
+.clt-preview-files-add{
+    max-width: 5.5rem;
+    min-width: 2.5rem;
     font-size: 14px;
     color: #e7b723;
     text-align: center;
@@ -57,7 +49,7 @@
     margin-left: 0.625rem;
     cursor: pointer;
 }
-.ngx-util-preview-files-add-icon{
+.clt-preview-files-add-icon{
     display: block;
     font-weight: 900;
     font-size: xx-large
