--- a/src/app/chat/chat/chat-detail-preview/chat-detail-preview.component.scss
+++ b/src/app/chat/chat/chat-detail-preview/chat-detail-preview.component.scss
@@ -44,7 +44,7 @@
     font-size: 14px;
     color: #e7b723;
     text-align: center;
-    padding: 0.5rem 3% !important;
+    padding: 0.5rem 0 !important;
     background: #fff;
     margin-left: 0.625rem;
     cursor: pointer;
