--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div style="width: 100px;">
-    <ngx-utilitario-chat-detail-preview></ngx-utilitario-chat-detail-preview>
+<div style="width: 1000px; height: 750px;">
+    <!-- <ngx-utilitario-chat-detail-preview></ngx-utilitario-chat-detail-preview> -->
     <!-- <ngx-utilitario-chat-detail-message [messages]="messages"></ngx-utilitario-chat-detail-message>  -->
     <!-- <ngx-utilitario-chat-detail-add></ngx-utilitario-chat-detail-add> -->
+    <ngx-utilitario-chat-detail [chatDetail]="chatDetail"></ngx-utilitario-chat-detail>
 </div>
 <!-- <button (click)="add()">agregar</button> -->
