--- a/src/app/chat/chat/chat-detail/chat-detail.component.scss
+++ b/src/app/chat/chat/chat-detail/chat-detail.component.scss
@@ -1,11 +1,11 @@
 .ngx-util-detail{
     display: flex;
     flex-flow: column;
-    // position: relative; 
     width: 100%;
     height: 100%;
-    border: 0.0625rem solid #e0e3e4;
+    // position: relative; 
     overflow: hidden;
+    // border: 0.0625rem solid #e0e3e4;
     // height: -webkit-fill-available;
 }
 //estilos aplicar a la cabecera del chat
