--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -74,6 +74,15 @@ $base-url: '/assets/' !default;
 
 
 /**
+ * altura 
+ */
+$line-height: 1.3;
+
+/**
+ * Fuente de la pagina
+ */
+$font-size: 1.3rem;
+/**
  * Tamaño base para el componente del chat
  */ 
 $font-size-chat: 1rem;
